forge/tests/errors/autofix_type.fg
fn main() {
    let port: string = 8080
    println(port)
}
